<resources>
    <string name="app_name">emoji</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Emoji大合集</string>
    <string name="nav_header_subtitle">开发者: 十月叶, 墨瀋(shěn)</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recent">⟳ Recent Used</string>
    <string name="menu_smile_emotion">🙂 Smile &amp; Emotions</string>
    <string name="menu_people_body">🖕 People &amp; Body</string>
    <string name="menu_animal_nature">🐱 Animal &amp; Nature</string>
    <string name="menu_food_drink">🍏 Food &amp; Drink</string>
    <string name="menu_activities">🏀 Activities</string>
    <string name="menu_travel_places">🚗 Travel &amp; Places</string>
    <string name="menu_objects">⌚ Objects</string>
    <string name="menu_symbols">💜 Symbols</string>
    <string name="menu_flags">🏁 Flags</string>
    <string name="title_activity_main">emoji</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>